--- a/task_managment/templates/includes/header.html
+++ b/task_managment/templates/includes/header.html
@@ -3,7 +3,7 @@
     <!-- В дальнейшем тут будет создано полноценное меню -->
     <nav class="navbar navbar-light" style="background-color: lightskyblue">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'posts:index'%}">
+        <a class="navbar-brand" href="{% url 'task:index'%}">
           <!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
-          <span style="color:lightskyblue">Ta</span>mang
+          <span style="color:red">Ta</span>mang
         </a>
