--- a/task_managment/templates/task/index.html
+++ b/task_managment/templates/task/index.html
@@ -2,10 +2,22 @@
 {% load static %}
 {% block title %}
   <title>Последние обновления на сайте</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 {% endblock %}
-{%block content%}    
-    {% for i in task_list %}
-    {{i.title}}
-    {{i.start_date}}<br>
-    {% endfor %}
+{%block content%}
+<main>
+  <div class="container mt-4">
+  {% for i in task_list %}
+  <ul class="list-group mt-4">
+  <li class="list-group-item">
+  <h4>{{i.title}}</h4>
+  <b>{{i.start_date}}</b>
+  <span>{{i.completed}}</span>
+  <span><a href="/detail/{{i.id}}">К заданию</a></span>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </li>
+  </ul>
+  {% endfor %}
+  </div>
+</main>
 {%endblock%}
