--- a/task_managment/templates/task/index.html
+++ b/task_managment/templates/task/index.html
@@ -7,12 +7,17 @@
 {%block content%}
 <main>
   <div class="container mt-4">
+    <h1><a href="create">Создать задачу</a></h1>
   {% for i in task_list %}
   <ul class="list-group mt-4">
   <li class="list-group-item">
   <h4>{{i.title}}</h4>
   <b>{{i.start_date}}</b>
-  <span>{{i.completed}}</span>
+  {% if i.completed == False %}
+  <h4><span class="badge bg-secondary">Не завершено</span></h4>
+  {% else %}
+  <h4><span class="badge bg-success">Завершено</span></h4>
+  {% endif %}
   <span><a href="/detail/{{i.id}}">К заданию</a></span>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </li>
