--- a/task_managment/templates/base.html
+++ b/task_managment/templates/base.html
@@ -18,6 +18,9 @@
     {% endblock %}
   </head>
   <body>
+    <header>
+      {% include 'includes/header.html' %}
+    </header>
     <main> 
       {%block content%}
         Контент не завезли
