--- a/task_managment/templates/task/create_task.html
+++ b/task_managment/templates/task/create_task.html
@@ -7,36 +7,16 @@
 <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
-        <div class="card-header">       
-          {% if is_edit %}
-            Редактировать запись
-          {% else %}
-            Добавить запись
-          {% endif %}             
+        <div class="card-header">
+            Добавить запись           
         </div>
         <div class="card-body">
-          <form method="post" enctype="multipart/form-data">
+          <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            {% for element in form %}
-              <div class="form-group row my-3 p-3">
-                <label for="id_text">
-                  {{ element.help_text}}                 
-                  <span class="required text-danger" >*</span>                  
-                </label>
-                {{ element }}              
-                <small id="id_text-help" class="form-text text-muted">
-                {{ element.verbose_name}}
-                {% if form.subject.errors %}
-                  <ol>
-                    {% for error in form.subject.errors %}
-                      <li><strong>{{ error|escape }}</strong></li>
-                    {% endfor %}
-                  </ol>
-                {% endif %}
-              </small>                  
-            </div>  
-            {% endfor %}
-            <button type="submit" class="btn btn-primary btn-block">{% if is_edit %}Сохранить{% else %}Добавить запись{% endif %}</button>
+            <div class="form-group row my-3 p-3">
+                {{ form.as_table}}
+            </div>
+           <input type="submit" value="Добавить">
           </form>
         </div>
       </div>
