--- a/task_managment/templates/task/task_detail.html
+++ b/task_managment/templates/task/task_detail.html
@@ -15,6 +15,9 @@
     {% else %}
     <h4><span class="badge bg-success">Завершено</span></h4>
     {% endif %}
+    {% if task.completed == True %}
+    <a class="btn btn-primary" href="{% url 'task:update2' task_id=task_id %}">Повторить</a>
+    {% endif %}
     <p><a href="/">Вернуться</a></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </div>
